# pydidas

./: .buildinfo  .flake8  .gitignore  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CNAME  LICENSE.md  MANIFEST.in  README.md  README.rst  REUSE.toml  __init__.py  _template.py  base_classes.py  composites.py  dataset.py  developer_guide.html  format_plugin_hints.py  formatter.py  formatting_checks.py  generic_tree.py  genindex.html  gui_test.py  index.html  introduction.html  main_gui.py  manuals.html  objects.inv  parameter.py  plugin_collection.py  plugin_tree.py  plugin_workflow_test.py  poni_test_new.poni  py-modindex.html  pydata_version_switcher.json  pydidas-env.yml  pyproject.toml  qt_presets.py  quickstart.html  (+11 more)
.doctrees/: developer_guide.doctree  index.doctree  introduction.doctree  manuals.doctree  quickstart.doctree
.doctrees/code/: code_documentation.doctree  concepts.doctree  package_structure.doctree
.doctrees/dev_guide/: dev_guide_list_of_signals.doctree  dev_guide_plugins.doctree
.doctrees/manuals/: commandline.doctree
.github/workflows/: build_full_gh_pages.yml  create_docs_for_previous_versions.yml  documentation.yml  formatting_checks.yml  pull_request_checks.yml  pydidas-tests.yml  release.yml  release_new_version.yml  unittests.yml  version_check.yml
.reuse/: dep5
23.12.08/: .buildinfo  developer_guide.html  genindex.html  index.html  introduction.html  manuals.html  objects.inv  py-modindex.html  search.html  searchindex.js
23.12.08/.doctrees/: introduction.doctree  manuals.doctree
23.12.08/_sources/: introduction.rst.txt
23.12.08/_static/: documentation_options.js
23.12.08/code/: code_documentation.html  concepts.html  package_structure.html
23.12.08/developer_guide/: dev_guide_apps.html  dev_guide_list_of_signals.html  dev_guide_multiprocessing.html
23.12.08/manuals/: commandline.html
24.01.18/: .buildinfo  developer_guide.html  genindex.html  index.html  introduction.html  manuals.html  objects.inv  py-modindex.html  search.html  searchindex.js
24.01.18/.doctrees/: developer_guide.doctree  index.doctree
24.01.18/_sources/: developer_guide.rst.txt  introduction.rst.txt  manuals.rst.txt
24.01.18/_static/: basic.css  documentation_options.js
24.01.18/code/: code_documentation.html  concepts.html  package_structure.html
24.01.18/developer_guide/: dev_guide_apps.html  dev_guide_list_of_signals.html  dev_guide_multiprocessing.html
24.01.18/manuals/: commandline.html
24.03.25/: .buildinfo  developer_guide.html  genindex.html  index.html  introduction.html  manuals.html  py-modindex.html  search.html  searchindex.js
24.03.25/.doctrees/: introduction.doctree
24.03.25/_sources/: developer_guide.rst.txt  introduction.rst.txt
24.03.25/code/: code_documentation.html  concepts.html  package_structure.html
24.03.25/dev_guide/: dev_guide_apps.html  dev_guide_list_of_signals.html  dev_guide_multiprocessing.html
24.03.25/manuals/: commandline.html
24.06.05/: developer_guide.html  genindex.html  index.html  introduction.html  manuals.html  quickstart.html  searchindex.js
24.06.05/.doctrees/: index.doctree  manuals.doctree
24.06.05/_sources/: manuals.rst.txt
24.06.05/_static/: documentation_options.js
24.06.05/dev_guide/: dev_guide_apps.html  dev_guide_multiprocessing.html  dev_guide_plugins.html
24.06.05/manuals/: commandline.html
LICENSES/: CC-BY-4.0.txt  CC-BY-ND-4.0.txt
_sources/: developer_guide.rst.txt  index.rst.txt
_sources/code/: package_structure.rst.txt
_sources/dev_guide/: dev_guide_list_of_signals.rst.txt  dev_guide_plugins.rst.txt
_static/: basic.css  documentation_options.js
code/: code_documentation.html  concepts.html  package_structure.html
code/api/: apps.html  (+9 more)
config/: __init__.py  gui_constants.py  qt_presets.py
core/: __init__.py  composites.py  dataset.py  experimental_settings.py  global_settings.py  parameter.py  scan_settings.py
dev/: developer_guide.html  genindex.html  index.html  manuals.html  searchindex.js
dev_guide/: dev_guide_apps.html  dev_guide_list_of_signals.html  dev_guide_multiprocessing.html  dev_guide_plugins.html
docs/: Makefile  genindex.html  index.html  make.bat
gui/: __init__.py  _exceptions.py  data_browsing_frame.py  experiment_settings_frame.py  gui_workflow_tree_edit_manager.py  pyfai_calib_frame.py  scan_settings_frame.py  toplevel_frame.py  workflow_edit_frame.py  workflow_tree_edit_manager.py
manuals/: commandline.html
notebooks/: d_vs_chi_Plugin.ipynb  d_vs_chi_playground.ipynb
plugins/: .dot_peak_fitting.py  __peak_fitting.py  azimuthal_integration.py  background_correction.py  base_plugins.py  bg_correction.py  eiger_loader.py  generic_base_plugins.py  hdf_loader.py  mccd_loader.py  peak_fitting.py
pydidas/: __init__.py  _exceptions.py  _template.py  clear_all_stored_qsettings.py  logging_level.py  plugin_collection.py  set_all_qsettings_to_defaults.py  version.py
pydidas-scripts/: __init__.py  clear_pydidas_qsettings.py  pydidas_gui.py
pydidas_plugins/: generic_base_plugins.py
pydidas_qtcore/: __init__.py  _backup_pydidas_qapp.py  fontsize.py  pydidas_qapp.py  pydidas_splash_screen.py
pydidas_scripts/: __init__.py  clear_pydidas_qsettings.py  open_documentation.py  pydidas_documentation.py  pydidas_gui.py  pydidas_remove_local_files.py  pydidas_updater_script.py  remove_local_files.py  remove_pydidas.py  remove_pydidas_from_system.py  run_pydidas_workflow.py
scripts/: clear_all_stored_qsettings.py  main_gui.py  pydidas_gui.py
stable/: .buildinfo  genindex.html  introduction.html  manuals.html  py-modindex.html  quickstart.html  search.html  searchindex.js
tests/: __init__.py  conftest.py
tests_of_workflow/: test_azimuthal_integration.py
utils/: hdf_dataset_filter.py
widgets/: __init__.py  central_widget_proxy.py  central_widget_stack.py  confirmation_bar.py  hdf_dataset_selector.py  plugin_collection_presenter.py  plugin_treeview.py  scroll_area.py  treeview_for_plugins.py  utilities.py  warning_box.py  workflow_plugin.py  workflow_tree_canvas.py
workflow_tree/: __init__.py  generic_tree.py  workflow_tree.py
(+5297 files in other folders)
