# Copyright 2023 - 2024, Helmholtz-Zentrum Hereon
# SPDX-License-Identifier: CC0-1.0

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pydidas"
authors = [{name = "Malte Storm"}]
description = "pydidas - the PYthon DIffraction Data Analysis Suite"
readme = "README.rst"
requires-python = "==3.11.*"
license = {text = "GNU General Public License v3"}
keywords = ["X-ray diffraction", "XRD", "WAXS", "SAXS"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Physics",
]
dynamic = ["version", "dependencies"]

[project.urls]
homepage = "https://pydidas.hereon.de/"
documentation = "https://hereon-gems.github.io/pydidas"
repository = "https://github.com/hereon-GEMS/pydidas"
changelog = "https://github.com/hereon-GEMS/pydidas/blob/master/CHANGELOG.md"

[tool.setuptools.dynamic]
version = { attr = "pydidas.version.VERSION" }
dependencies = { file = ["requirements.txt"]}

[tool.setuptools]
packages = ["pydidas", "pydidas_scripts", "pydidas_plugins", "pydidas_qtcore"]

[project.scripts]
pydidas-clear-settings = "pydidas_scripts.clear_local_settings:clear_local_settings"
pydidas-updater = "pydidas_scripts.pydidas_updater_script:run_update"
pydidas-documentation = "pydidas_scripts.open_documentation:open_documentation"
pydidas-remove-local-files = "pydidas_scripts.remove_local_files:run"
run-pydidas-workflow = "pydidas_scripts.run_pydidas_workflow:run_workflow" 
remove-pydidas = "pydidas_scripts.remove_pydidas_from_system:remove_pydidas_from_system"

[project.gui-scripts]
pydidas-gui = "pydidas_scripts.pydidas_gui:run_gui"

[tool.pip-compile]
dependencies = [
    "pyFAI==2024.2.0",
    "scikit-image>=0.22.0",
    "qtawesome>=1.3",
    "sphinx>=7.2.0",
    "sphinx_rtd_theme>=2.0.0",
    "pyopencl>=2024.1",
    "qtpy>=2.4.0",
    "hdf5plugin>=4.4.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "PyQt5>=5.15",
    "build>=1.0.3",
]

[tools.coverage.report]
omit = ['*/tests/*']

[tool.isort]
profile = 'black'
extend_skip = ["__init__.py"]
lines_after_imports = 2

[tool.black]
line-length = 88
target-version = ['py311']