# Copyright 2023 - 2024, Helmholtz-Zentrum Hereon
# SPDX-License-Identifier: CC0-1.0

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pydidas"
authors = [{name = "Malte Storm"}]
description = "pydidas - the PYthon DIffraction Data Analysis Suite"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GNU General Public License v3"}
keywords = ["X-ray diffraction", "XRD", "WAXS", "SAXS"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Physics",
]
dynamic = ["version", "dependencies", "optional-dependencies"]


[project.urls]
homepage = "https://pydidas.hereon.de/"
documentation = "https://hereon-gems.github.io/pydidas"
repository = "https://github.com/hereon-GEMS/pydidas"
changelog = "https://github.com/hereon-GEMS/pydidas/blob/master/CHANGELOG.md"

[tool.setuptools.dynamic]
version = { attr = "pydidas.version.VERSION" }
dependencies = { file = ["requirements.txt"]}
optional-dependencies.dev = { file = ["requirements_dev.txt"]}

[tool.setuptools]
packages = ["pydidas", "pydidas_scripts", "pydidas_plugins", "pydidas_qtcore"]

[project.scripts]
pydidas-clear-settings = "pydidas_scripts.clear_local_settings:clear_local_settings"
pydidas-updater = "pydidas_scripts.pydidas_updater_script:run_update"
pydidas-documentation = "pydidas_scripts.open_documentation:open_documentation"
pydidas-remove-local-files = "pydidas_scripts.remove_local_files:run"
run-pydidas-workflow = "pydidas_scripts.run_pydidas_workflow:run_workflow" 
remove-pydidas = "pydidas_scripts.remove_pydidas_from_system:remove_pydidas_from_system"

[project.gui-scripts]
pydidas-gui = "pydidas_scripts.pydidas_gui:run_gui"

[tool.coverage.run]
branch = true

[tool.coverage.report]
omit = ["tests/*", "pydidas/gui/*", "pydidas/widgets/*"]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.isort]
profile = 'black'
extend_skip = ["__init__.py"]
lines_after_imports = 2

[tool.black]
line-length = 88
target-version = ['py311']

[tool.bandit]
skips = ["B311"]

[tool.ruff]
extend-exclude = ["docs/source/conf.py"]
show-fixes = true

[tool.ruff.lint]
extend-select = ["I", "C90", "F401"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 12.
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
# F401 module imported but unused
# F403 ‘from module import *’ used; unable to detect undefined names
# F405 name may be undefined, or defined from star imports: module
# E402 module level import not at top of file
# E501 line too long
# W605 invalid escape sequence
"__init__.py" = ["F401", "F403", "F405", "E402", "I"]
"pydidas/__init__.py" = ["F401", "F403", "F405", "E402", "I"]
"generic_base_plugins.py" = ["F401"]
"qt_presets.py" = ["W605"]
"file_extensions.py" = ["W605"]
"numpy_parser.py" = ["W605"]
# For reading Eiger data, the hdf5plugin must be imported to allow
# decompressing the data, but it is not actually used.
"dectris_utils.py" = ["F401"]
"hdf5_dataset_utils.py" = ["F401"]
"read_hdf5_slice.py" = ["F401"]
"read_hdf5_dataset_.py" = ["F401"]
"hdf5_io.py" = ["F401"]
"base_app.py" = ["E731"]
"pydidas_plot2d_with_integration_regions.py" = ["C901"]
"pydidas_gui.py" = ["F401"]
"workflow_run_frame.py" = ["E722"]

