# This file is part of pydidas.
#
# pydidas is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Pydidas is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Pydidas. If not, see <http://www.gnu.org/licenses/>.

[metadata]
name = pydidas
version = 0.1.0
author = Malte Storm
description = pydidas - the PYthon DIffraction Data Analysis Suite
long_description = file: README.rst
license = GNU General Public License v3
license_files = LICENSE.md
keywords = X-ray diffraction, XRD, WAXS, SAXS
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    requests
    importlib; python_version >= "3.9"

[options.entry_points]
console_scripts = 
    pydidas-clear-qsettings = pydidas_scripts.clear_pydidas_qsettings:clear_pydidas_QSettings
    pydidas-gui = pydidas_scripts.pydidas_gui:run_gui

[options.packages.find]
where = .
exclude = tests plugins
