# This file is part of pydidas.
#
# pydidas is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Pydidas is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Pydidas. If not, see <http://www.gnu.org/licenses/>.

[metadata]
name = pydidas
version = 0.1.8
author = Malte Storm
description = pydidas - the PYthon DIffraction Data Analysis Suite
long_description = file: README.rst
license = GNU General Public License v3
license_files = LICENSE.md
keywords = X-ray diffraction, XRD, WAXS, SAXS
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Physics


[options]
package_dir = 
    pydidas = pydidas
    pydidas_scripts = pydidas_scripts
    pydidas_plugins = pydidas_plugins   
include_package_data = True
python_requires = >=3.9
install_requires =
    requests


[options.entry_points]
console_scripts = 
    pydidas-clear-qsettings = pydidas_scripts.clear_pydidas_qsettings:clear_pydidas_QSettings
    pydidas-gui = pydidas_scripts.pydidas_gui:run_gui


[flake8]
per-file-ignores =
    # F401 module imported but unused
    # F403 ‘from module import *’ used; unable to detect undefined names
    # F405 name may be undefined, or defined from star imports: module
    # E402 module level import not at top of file
    # E501 line too long
    # W605 invalid escape sequence
    __init__.py: F401, F403, F405, E402
    generic_base_plugins.py: F401
    qt_presets.py: W605
    file_extensions.py: W605
    # For reading Eiger data, the hdf5plugin must be imported to allow 
    # decompressing the data, but it is not actually used.
    dectris_utils.py: F401
    hdf5_dataset_utils.py: F401
    read_hdf5_slice.py: F401
    hdf5_dataset_selector.py: F401, E501
    hdf5_io.py: F401
# E203 whitespace before ':'
ignore =  E121, E123, E126, E133, E203, W503, W504
max-line-length = 88
max-complexity = 10
color = auto
statistics = True
exclude = .git,__pycache__,docs/source/conf.py, old, build, dist
